--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,7 @@
   <section class="menu" id="cookieForm">
       <div class="menu__items">
         <div class="menu__item" data-id="${cookie.id}">
-          <img src="${cookie.Img}" class="menu__item-image" alt="${cookie.Cookie_name}">
+          <img src="img/${cookie.Img}" class="menu__item-image" alt="${cookie.Cookie_name}">
                 <div class="menu__item-content">
                     <h3 class="menu__item-title">${cookie.Cookie_name}</h3>
                     <p class="menu__item-description">${cookie.Description}</p>
